classDiagram
    direction TB

    %% LEVEL 1: Lookups / High-Level Dimensions
    class competitions {
        +VARCHAR competition_id
        +VARCHAR name
    }

    %% LEVEL 2: Primary Entities
    class clubs {
        +INT club_id
        +VARCHAR domestic_competition_id
    }
    class games {
        +INT game_id
        +VARCHAR competition_id
        +INT home_club_id
        +INT away_club_id
    }

    %% LEVEL 3: Core Subjects
    class players {
        +INT player_id
        +INT current_club_id
    }

    %% LEVEL 4: Facts, Events & Transactions
    class transfers {
        +INT player_id
        +INT from_club_id
        +INT to_club_id
        +NUMERIC transfer_fee
    }
    class player_valuations {
        +INT player_id
        +DATE date
        +NUMERIC market_value_in_eur
    }
    class appearances {
        +VARCHAR appearance_id
        +INT game_id
        +INT player_id
    }
    class game_events {
        +INT game_event_id
        +INT game_id
        +INT player_id
        +INT club_id
    }
    class game_lineups {
        +VARCHAR game_lineups_id
        +INT game_id
        +INT player_id
        +INT club_id
    }
    class club_games {
        +INT game_id
        +INT club_id
        +INT opponent_id
    }

    %% Relationships
    competitions --|> games : competition_id
    competitions --|> clubs : domestic_competition_id
    
    clubs --|> games : home/away_club_id
    clubs --|> players : current_club_id
    clubs --|> club_games : club_id
    clubs --|> game_events : club_id
    clubs --|> game_lineups : club_id
    clubs --|> transfers : from/to_club_id
    
    games --|> club_games : game_id
    games --|> appearances : game_id
    games --|> game_events : game_id
    games --|> game_lineups : game_id
    
    players --|> appearances : player_id
    players --|> game_events : player_id
    players --|> game_lineups : player_id
    players --|> player_valuations : player_id
    players --|> transfers : player_id
